// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for fullyEligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsNotMax": null,
    "notHasInitialClassificationInStatePrisonCustody": null,
  },
  "externalId": "RES003",
  "formInformation": {
    "calculatedTotalScore": 11,
    "classificationType": "STUB",
    "gangAffiliationId": "STUB",
    "healthClassification": "STUB",
    "lastCafDate": 2025-01-15T00:00:00.000Z,
    "lastCafTotal": 10,
    "latestClassificationDate": 2025-02-20T00:00:00.000Z,
    "latestOverrideReason": null,
    "latestVantageCompletedDate": 2025-01-10T00:00:00.000Z,
    "latestVantageRiskLevel": "STUB",
    "levelOfCare": "LVL1",
    "q1Notes": {
      "listPriorNonTdocConvictions60Months": "some offense on 12/1/2022",
      "listPriorViolentTdocConvictions60Months": "some other offense on 8/22/2021",
    },
    "q1Score": 2,
    "q2Notes": "a third offense",
    "q2Score": 10,
    "q3Notes": "ABC on 1/8/2023",
    "q3Score": -3,
    "q4Notes": "",
    "q4Score": 2,
    "q5Notes": "",
    "q5Score": -1,
    "q6Score": 0,
    "sentenceEffectiveDate": 2024-12-01T00:00:00.000Z,
    "sentenceExpirationDate": 2028-12-01T00:00:00.000Z,
    "sentenceFullExpirationDate": 2029-12-01T00:00:00.000Z,
    "sentenceReleaseEligibilityDate": 2027-06-01T00:00:00.000Z,
    "sentenceSafetyValveDate": 2030-12-01T00:00:00.000Z,
    "statusAtHearingSeg": null,
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_TN",
}
`;

exports[`schema for ineligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {},
  "externalId": "RES003",
  "formInformation": {
    "calculatedTotalScore": 11,
    "classificationType": "STUB",
    "gangAffiliationId": "STUB",
    "healthClassification": "STUB",
    "lastCafDate": 2025-01-15T00:00:00.000Z,
    "lastCafTotal": 10,
    "latestClassificationDate": 2025-02-20T00:00:00.000Z,
    "latestOverrideReason": null,
    "latestVantageCompletedDate": 2025-01-10T00:00:00.000Z,
    "latestVantageRiskLevel": "STUB",
    "levelOfCare": "LVL1",
    "q1Notes": {
      "listPriorNonTdocConvictions60Months": "some offense on 12/1/2022",
      "listPriorViolentTdocConvictions60Months": "some other offense on 8/22/2021",
    },
    "q1Score": 2,
    "q2Notes": "a third offense, a fourth offense",
    "q2Score": 10,
    "q3Notes": "ABC on 1/8/2023
XYZ on 2/11/2022",
    "q3Score": -3,
    "q4Notes": "DEF on 1/8/2023",
    "q4Score": 2,
    "q5Notes": "HIJ on 1/8/2023",
    "q5Score": -1,
    "q6Score": 0,
    "sentenceEffectiveDate": 2024-12-01T00:00:00.000Z,
    "sentenceExpirationDate": 2028-12-01T00:00:00.000Z,
    "sentenceFullExpirationDate": 2029-12-01T00:00:00.000Z,
    "sentenceReleaseEligibilityDate": 2027-06-01T00:00:00.000Z,
    "sentenceSafetyValveDate": 2030-12-01T00:00:00.000Z,
    "statusAtHearingSeg": null,
  },
  "ineligibleCriteria": {
    "custodyLevelIsNotMax": {
      "custodyLevel": "Maximum",
    },
    "notHasInitialClassificationInStatePrisonCustody": {
      "initialAssessmentDate": "2024-12-28",
      "initialClassificationDate": "2025-01-01",
      "initialClassificationDecisionDate": "2025-01-01",
    },
  },
  "isAlmostEligible": false,
  "isEligible": false,
  "metadata": {},
  "stateCode": "US_TN",
}
`;
